--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ pillow==9.4.0
 django-taggit==3.1.0 
 django-crispy-forms==1.14.0
 crispy-bootstrap5==0.6
-django-allauth==0.50.0
+#django-allauth==0.50.0
 coverage==7.0.5 
-django-admin-honeypot==1.1.0
-whitenoise==6.1.0
+
+
 
