working project - info Markdown-file updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Git
+.gitignore
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +9,12 @@ __pycache__/
 
 # C extensions
 *.so
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
 # Distribution / packaging
 .Python
