--- a/social/.env
+++ b/social/.env
@@ -2,8 +2,8 @@
 DJANGO_SECRET_KEY=-iMMwtv4oXEpRuVXYWZW8uPtwNf72ESmPQl_zfBdmBk_vizV6eQ
 
 # EMAIL
-DJANGO_EMAIL_HOST_USER=filippociarlo@gmail.com
-DJANGO_EMAIL_HOST_PASSWORD=qpbgzewskakexqpw
+DJANGO_EMAIL_HOST_USER=your@email.com
+DJANGO_EMAIL_HOST_PASSWORD=yourkey
 
 ##### DEBUG SETTINGS #####
 
